
package lapr2.pot.model;


public class Freelancer {
    
}
